--- a/maths spé/C15/cours.tex
+++ b/maths spé/C15/cours.tex
@@ -2,6 +2,8 @@
 \begin{document}
 \begin{adjustwidth}{-3cm}{-3cm}
 \input{../../stock/commands.tex}
+\newcounter{chapitre}
+\setcounter{chapitre}{15}
 
 \newcommand{\tribu}[0]{\mathcal{T}}
 \newcommand{\univ}[0]{\Omega}
@@ -40,6 +42,12 @@
     On dit alors que $(\univ, \tribu, \proba)$ constitue un \notion{espace probabilisé}.
 \end{definition}
 
+\begin{theoreme}{15.17}{de la limite monotone}
+    Soit $(\univ, \tribu, \proba)$ un espace probabilisé. Soit $(A_n)_{n\in \N}$ une suite croissante d'évènements ($\forall n \in \N,\, A_n \subset A_{n+1}$). Alors~:
+    \begin{enumeratebf}
+        \item 
+    \end{enumeratebf}
+\end{theoreme}
 
 
 \input{../../stock/pied.tex}
